--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Snacks API</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Snacks API</h1>
+  <h3>Routes:</h3>
+  <ul>
+    <li>GET /snacks</li>
+    <li>GET /snacks/:id</li>
+    <li>POST /snacks</li>
+    <li>PUT /snacks/:id</li>
+    <li>DELETE /snacks/:id</li>
+  </ul>
 </body>
 
 </html>
